crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__extern_items.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify(r#\"\n            unsafe extern \"java\" {\n                [\"java/lang/Foo\"]\n                type Foo {\n                    [\"bar\"]\n                    static let bar: Int\n\n                    [\"baz\"] fn baz(value: Int) -> String\n\n                    [\"static\"] static fn slkfdj()\n                }\n\n                [\"java/lang/System\"]\n                type System {\n                    [\"out\"]\n                    static let out: Foo\n                }\n            }\n            \"#)"
---
syntax_tree:
0..472 Root
|0..472 File
||Newline `\n`
||Whitespace `            `
||13..459 Item
|||13..459 ItemKind
||||13..459 ExternBlock
|||||KeywordUnsafe `unsafe`
|||||Whitespace ` `
|||||KeywordExtern `extern`
|||||Whitespace ` `
|||||StringLiteral `\"java\"`
|||||Whitespace ` `
|||||BraceOpen `{`
|||||Newline `\n`
|||||Whitespace `                `
|||||52..291 ExternBlockItem
||||||52..69 ExternItemMetadata
|||||||BracketOpen `[`
|||||||StringLiteral `\"java/lang/Foo\"`
|||||||BracketClose `]`
||||||Newline `\n`
||||||Whitespace `                `
||||||86..291 ExternBlockItemKind
|||||||86..291 ExternType
||||||||KeywordType `type`
||||||||Whitespace ` `
||||||||Identifier `Foo`
||||||||Whitespace ` `
||||||||95..291 ExternTypeBody
|||||||||BraceOpen `{`
|||||||||Newline `\n`
|||||||||Whitespace `                    `
|||||||||117..164 ExternTypeBodyItem
||||||||||117..124 ExternItemMetadata
|||||||||||BracketOpen `[`
|||||||||||StringLiteral `\"bar\"`
|||||||||||BracketClose `]`
||||||||||Newline `\n`
||||||||||Whitespace `                    `
||||||||||145..164 ExternTypeBodyItemKind
|||||||||||145..164 ExternTypeStaticLet
||||||||||||KeywordStatic `static`
||||||||||||Whitespace ` `
||||||||||||KeywordLet `let`
||||||||||||Whitespace ` `
||||||||||||Identifier `bar`
||||||||||||Colon `:`
||||||||||||Whitespace ` `
||||||||||||161..164 Type
|||||||||||||161..164 TypeRef
||||||||||||||161..164 TypePath
|||||||||||||||Identifier `Int`
|||||||||Newline `\n`
|||||||||Newline `\n`
|||||||||Whitespace `                    `
|||||||||186..222 ExternTypeBodyItem
||||||||||186..194 ExternItemMetadata
|||||||||||BracketOpen `[`
|||||||||||StringLiteral `\"baz\"`
|||||||||||BracketClose `]`
|||||||||||Whitespace ` `
||||||||||194..222 ExternTypeBodyItemKind
|||||||||||194..222 ExternFunction
||||||||||||KeywordFn `fn`
||||||||||||Whitespace ` `
||||||||||||Identifier `baz`
||||||||||||200..213 ParameterList
|||||||||||||ParensOpen `(`
|||||||||||||201..211 ParameterDefinition
||||||||||||||Identifier `value`
||||||||||||||Colon `:`
||||||||||||||Whitespace ` `
||||||||||||||208..211 Type
|||||||||||||||208..211 TypeRef
||||||||||||||||208..211 TypePath
|||||||||||||||||Identifier `Int`
|||||||||||||ParensClose `)`
|||||||||||||Whitespace ` `
||||||||||||213..222 ReturnType
|||||||||||||Arrow `->`
|||||||||||||Whitespace ` `
|||||||||||||216..222 Type
||||||||||||||216..222 TypeRef
|||||||||||||||216..222 TypePath
||||||||||||||||Identifier `String`
|||||||||Newline `\n`
|||||||||Newline `\n`
|||||||||Whitespace `                    `
|||||||||244..273 ExternTypeBodyItem
||||||||||244..255 ExternItemMetadata
|||||||||||BracketOpen `[`
|||||||||||StringLiteral `\"static\"`
|||||||||||BracketClose `]`
|||||||||||Whitespace ` `
||||||||||255..273 ExternTypeBodyItemKind
|||||||||||255..273 ExternFunction
||||||||||||KeywordStatic `static`
||||||||||||Whitespace ` `
||||||||||||KeywordFn `fn`
||||||||||||Whitespace ` `
||||||||||||Identifier `slkfdj`
||||||||||||271..273 ParameterList
|||||||||||||ParensOpen `(`
|||||||||||||ParensClose `)`
|||||||||Newline `\n`
|||||||||Whitespace `                `
|||||||||BraceClose `}`
|||||Newline `\n`
|||||Newline `\n`
|||||Whitespace `                `
|||||309..445 ExternBlockItem
||||||309..329 ExternItemMetadata
|||||||BracketOpen `[`
|||||||StringLiteral `\"java/lang/System\"`
|||||||BracketClose `]`
||||||Newline `\n`
||||||Whitespace `                `
||||||346..445 ExternBlockItemKind
|||||||346..445 ExternType
||||||||KeywordType `type`
||||||||Whitespace ` `
||||||||Identifier `System`
||||||||Whitespace ` `
||||||||358..445 ExternTypeBody
|||||||||BraceOpen `{`
|||||||||Newline `\n`
|||||||||Whitespace `                    `
|||||||||380..427 ExternTypeBodyItem
||||||||||380..387 ExternItemMetadata
|||||||||||BracketOpen `[`
|||||||||||StringLiteral `\"out\"`
|||||||||||BracketClose `]`
||||||||||Newline `\n`
||||||||||Whitespace `                    `
||||||||||408..427 ExternTypeBodyItemKind
|||||||||||408..427 ExternTypeStaticLet
||||||||||||KeywordStatic `static`
||||||||||||Whitespace ` `
||||||||||||KeywordLet `let`
||||||||||||Whitespace ` `
||||||||||||Identifier `out`
||||||||||||Colon `:`
||||||||||||Whitespace ` `
||||||||||||424..427 Type
|||||||||||||424..427 TypeRef
||||||||||||||424..427 TypePath
|||||||||||||||Identifier `Foo`
|||||||||Newline `\n`
|||||||||Whitespace `                `
|||||||||BraceClose `}`
|||||Newline `\n`
|||||Whitespace `            `
|||||BraceClose `}`
||Newline `\n`
||Whitespace `            `

diagnostics:
