crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__if_statemt-2.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"if true { print(false) } else { print(true) }\")"
---
syntax_tree:
0..45 Root
|0..45 Block
||0..45 Statement
|||0..45 IfStatement
||||KeywordIf `if`
||||Whitespace ` `
||||3..8 Expression
|||||3..8 Value
||||||3..8 BooleanLiteral
|||||||KeywordTrue `true`
|||||||Whitespace ` `
||||BraceOpen `{`
||||Whitespace ` `
||||10..23 Block
|||||10..23 Statement
||||||10..23 Expression
|||||||10..23 PostfixOperation
||||||||10..15 Value
|||||||||10..15 Ident
||||||||||Identifier `print`
||||||||15..23 PostfixOperator
|||||||||15..23 ArgumentList
||||||||||ParensOpen `(`
||||||||||16..21 Expression
|||||||||||16..21 Value
||||||||||||16..21 BooleanLiteral
|||||||||||||KeywordFalse `false`
||||||||||ParensClose `)`
||||||||||Whitespace ` `
||||BraceClose `}`
||||Whitespace ` `
||||25..45 IfStatementElse
|||||KeywordElse `else`
|||||Whitespace ` `
|||||BraceOpen `{`
|||||Whitespace ` `
|||||32..44 Block
||||||32..44 Statement
|||||||32..44 Expression
||||||||32..44 PostfixOperation
|||||||||32..37 Value
||||||||||32..37 Ident
|||||||||||Identifier `print`
|||||||||37..44 PostfixOperator
||||||||||37..44 ArgumentList
|||||||||||ParensOpen `(`
|||||||||||38..42 Expression
||||||||||||38..42 Value
|||||||||||||38..42 BooleanLiteral
||||||||||||||KeywordTrue `true`
|||||||||||ParensClose `)`
|||||||||||Whitespace ` `
|||||BraceClose `}`

diagnostics:
